IGR-54 fixed unitTests